fixed z-indexig

--- a/puppyracer/src/App.css
+++ b/puppyracer/src/App.css
@@ -22,7 +22,7 @@ body {
   position: absolute;
   width: 100px; /* You can adjust this as needed */
   height: auto; /* Maintains aspect ratio */
-  z-index: 2; /* Add this line */
+  z-index: 0; /* Add this line */
   transform: tran slate(-50%, -50%); /* Added this line */
 }
 
@@ -88,12 +88,11 @@ body {
   position: absolute;
   bottom: 50px;
   width: 100%;
+  z-index: 3;
 }
 
 .TimelineSegment {
-  display: flex;
-  flex: 1;
-  align-items: center;
+  z-index: 2;
 }
 
 .TimelineLine {
@@ -119,7 +118,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 0;
+  z-index: 2;
   pointer-events: none;
 }
 
